added content to ribs page. Added ribs.JPG

--- a/recipes/sausage-ribs.html
+++ b/recipes/sausage-ribs.html
@@ -1,1 +1,49 @@
 <h1>Sausage Ribs</h1>
+<img
+  src="../img/ribs.JPG"
+  alt="Delicious and tender ribs, cooked with the seasonings of classic Italian sausage"
+/>
+
+<h2>Description</h2>
+<p>Chef John Comments:</p>
+<p>
+  "Sweet and succulent pork ribs are never a bad addition to the game day
+  buffet, but they can get predictable with the same old rubs and sauces. Here
+  we have all the baby back rib-y goodness you know and love, but with the
+  flavor profile of sweet Italian fennel sausage.
+</p>
+<p>
+  These really have a wonder flavor, which was further highlighted by the spicy,
+  sweet, and tangy orange glaze. My only regret was that I didn't have any
+  hotdog buns around, as I would have pulled out the bones and served these just
+  like a real sausage sandwich. There's always next time."
+</p>
+<h3>Ingredients for two racks of ribs...</h3>
+<ul>
+  <li>2 trimmed racks of baby back pork ribs</li>
+  <p>
+    <strong><em>for the rub...</em></strong>
+  </p>
+  <li>1 tbsp fennel seed, crushed fine</li>
+  <li>1tbsp freshly ground black pepper</li>
+  <li>1 tbsp garlic salt</li>
+  <li>1 tbsp sugar</li>
+  <li>1 tbsp kosher salt</li>
+  <li>1/2 tsp cayenne or to tast</li>
+  <p>
+    <strong><em>for the glaze...</em></strong>
+  </p>
+  <li>1/3 cup brown sugar</li>
+  <li>1/3 cup orange juice</li>
+  <li>1/3 cup rice wine vinegar</li>
+  <li>2 tsp hot chili sauce or to taste</li>
+  <li>1 tbsp orange zest</li>
+</ul>
+
+<h3>Steps</h3>
+<ol type = "1">
+    <li>Mix ingredients for rub together and coat the meat</li>
+    <li>Bake ribs at 275 degrees F. for 2 1/2 to 3 hours or until fork tender.</li>
+    <li>Cut, coat with glaze, and finish in a hot 425 degrees F. oven until caramelized.</li>
+</ol>
+
