added files, modified hashbrowns

--- a/recipes/sausage-ribs.html
+++ b/recipes/sausage-ribs.html
@@ -1,4 +1,4 @@
-<h1>Sausage Ribs</h1>
+<h1>Chef John's Fabulous Sausage Ribs</h1>
 <img
   src="../img/ribs.JPG"
   alt="Delicious and tender ribs, cooked with the seasonings of classic Italian sausage"
