--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h2>
       <a href="recipes/sausage-ribs.html">Chef John's Fabulous Sausage Ribs!</a>
     </h2>
+    <h2>
+      <a href="recipes/hash-browns.html">Emily's Famous Hash Browns</a>
+    </h2>
   </body>
 </html>
