added link to chilaquiles.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <a href="recipes/sausage-ribs.html">Chef John's Fabulous Sausage Ribs!</a>
     </h2>
     <h2>
-      <a href="recipes/hash-browns.html">Emily's Famous Hash Browns</a>
+      <a href="recipes/hash-browns.html">Emily's Famous Hash Browns!</a>
+    </h2>
+    <h2>
+      <a href="recipes/chilaquiles.html">Anne's Chicken Chilaquiles Rojas!</a>
     </h2>
   </body>
 </html>
